// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom notifications 1`] = `
<div
  class="Notificationsstyles__Box-p5iec4-0 dRRBMK"
>
  <div
    class="Notificationstyles__Box-ua71du-1 VMrRP"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 cdJabY"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M19.5 5.586L20.914 7 9.5 18.414 3.086 12 4.5 10.586l5 5 10-10z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Custom notification
        </div>
        <div>
          <b
            style="text-transform:uppercase"
          >
            [ok]: 
          </b>
          This is a custom notification
          <div
            style="margin-top:10px"
          >
            <button
              class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
              type="button"
            >
              <span
                class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
              >
                OK
              </span>
            </button>
          </div>
          <span
            class="Notificationstyles__CloseBox-ua71du-0 beKwqV"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 VMrRP"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 eWXDzp"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Custom notification
        </div>
        <div>
          <b
            style="text-transform:uppercase"
          >
            [error]: 
          </b>
          This is a custom error notification
          <span
            class="Notificationstyles__CloseBox-ua71du-0 lbgkyb"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications 1`] = `
<div
  class="Notificationsstyles__Box-p5iec4-0 eiLLzv"
>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 gymNvr"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M19.5 5.586L20.914 7 9.5 18.414 3.086 12 4.5 10.586l5 5 10-10z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 beKwqV"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 bZzAQR"
      id="notification_2"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 ildjWw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 kdgEwy"
      id="notification_3"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Error notification.
        </div>
        <div>
          Для ошибок.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 lbgkyb"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ buttons 1`] = `
<div
  class="Notificationsstyles__Box-p5iec4-0 eiLLzv"
>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 gymNvr"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M19.5 5.586L20.914 7 9.5 18.414 3.086 12 4.5 10.586l5 5 10-10z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 beKwqV"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 bZzAQR"
      id="notification_2"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 ildjWw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 kdgEwy"
      id="notification_3"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Error notification.
        </div>
        <div>
          Для ошибок.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 lbgkyb"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 ckrXSd"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 klUbFw"
      id="notification_4"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 kSUESK"
      id="notification_5"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="Alertstyles__Actions-sc-18uul3b-4 eOzpup"
        >
          <div
            class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
          >
            <div
              class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
            >
              <button
                class="Buttonstyles__Box-qfvnbt-0 ijBBiW"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
            >
              <button
                class="Buttonstyles__Box-qfvnbt-0 REMLL"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 hCEiLY"
      id="notification_6"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M19.5 5.586L20.914 7 9.5 18.414 3.086 12 4.5 10.586l5 5 10-10z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 beKwqV"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="Alertstyles__Actions-sc-18uul3b-4 eOzpup"
        >
          <div
            class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
          >
            <div
              class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
            >
              <button
                class="Buttonstyles__Box-qfvnbt-0 ijBBiW"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
            >
              <button
                class="Buttonstyles__Box-qfvnbt-0 REMLL"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 bfSJOq"
      id="notification_7"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 ildjWw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="Alertstyles__Actions-sc-18uul3b-4 eOzpup"
        >
          <div
            class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
          >
            <div
              class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
            >
              <button
                class="Buttonstyles__Box-qfvnbt-0 ijBBiW"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
            >
              <button
                class="Buttonstyles__Box-qfvnbt-0 REMLL"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 fnKmCt"
      id="notification_8"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Notification with actions
        </div>
        <div>
          Some text goes here.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 lbgkyb"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
        <div
          class="Alertstyles__Actions-sc-18uul3b-4 eOzpup"
        >
          <div
            class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
          >
            <div
              class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
            >
              <button
                class="Buttonstyles__Box-qfvnbt-0 ijBBiW"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
                >
                  OK
                </span>
              </button>
            </div>
            <div
              class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
            >
              <button
                class="Buttonstyles__Box-qfvnbt-0 REMLL"
                type="button"
              >
                <span
                  class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ compact 1`] = `
<div
  class="Notificationsstyles__Box-p5iec4-0 eiLLzv"
>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 gymNvr"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M19.5 5.586L20.914 7 9.5 18.414 3.086 12 4.5 10.586l5 5 10-10z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 beKwqV"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 bZzAQR"
      id="notification_2"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 ildjWw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 kdgEwy"
      id="notification_3"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            clip-rule="evenodd"
            d="M12.874 2.514a1 1 0 00-1.748 0l-10 18A1 1 0 002 22h20a1 1 0 00.874-1.486l-10-18zM12 5.06L20.3 20H3.7L12 5.06zM11 10v5h2v-5h-2zm1 8.75a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Error notification.
        </div>
        <div>
          Для ошибок.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 lbgkyb"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 ckrXSd"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 klUbFw"
      id="notification_4"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ limit 1`] = `
<div
  class="Notificationsstyles__Box-p5iec4-0 eiLLzv"
>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
      id="notification_0"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Plain notification.
        </div>
        <div>
          Для нейтральных уведомлений
          <span
            class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 gymNvr"
      id="notification_1"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M19.5 5.586L20.914 7 9.5 18.414 3.086 12 4.5 10.586l5 5 10-10z"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Success notification.
        </div>
        <div>
          Для успешных уведомлений.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 beKwqV"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Notificationstyles__Box-ua71du-1 koinWy"
    open=""
  >
    <div
      class="Alertstyles__Box-sc-18uul3b-3 bZzAQR"
      id="notification_2"
    >
      <div
        class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M11 13V7h2v6h-2zm1 4a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
          />
          <path
            clip-rule="evenodd"
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
      >
        <div
          class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
        >
          Warning notification.
        </div>
        <div>
          Для предупреждений.
          <span
            class="Notificationstyles__CloseBox-ua71du-0 ildjWw"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications w/ position 1`] = `
Array [
  <div
    class="Notificationsstyles__Box-p5iec4-0 kOGuzI"
  >
    <div
      class="Notificationstyles__Box-ua71du-1 koinWy"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
        >
          <div
            class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-p5iec4-0 eiLLzv"
  >
    <div
      class="Notificationstyles__Box-ua71du-1 koinWy"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
        >
          <div
            class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-p5iec4-0 ejmmyT"
  >
    <div
      class="Notificationstyles__Box-ua71du-1 koinWy"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
        >
          <div
            class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-p5iec4-0 jVvuOx"
  >
    <div
      class="Notificationstyles__Box-ua71du-1 koinWy"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
        >
          <div
            class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-p5iec4-0 faZDzu"
  >
    <div
      class="Notificationstyles__Box-ua71du-1 koinWy"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
        >
          <div
            class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="Notificationsstyles__Box-p5iec4-0 dRRBMK"
  >
    <div
      class="Notificationstyles__Box-ua71du-1 koinWy"
      open=""
    >
      <div
        class="Alertstyles__Box-sc-18uul3b-3 ehRmPZ"
        id="notification_0"
      >
        <div
          class="Alertstyles__IconContainer-sc-18uul3b-0 lgnGRa"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M13.5 8.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zm-4 8.5v-2H11v-2h-1v-2h2a1 1 0 011 1v3h1.5v2h-5z"
            />
            <path
              clip-rule="evenodd"
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="Alertstyles__TextContainer-sc-18uul3b-2 isQZDp"
        >
          <div
            class="Alertstyles__Title-sc-18uul3b-1 dyTuid"
          >
            Plain notification.
          </div>
          <div>
            Для нейтральных уведомлений
            <span
              class="Notificationstyles__CloseBox-ua71du-0 gXgsgB"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
